styles/index.css
:root{
    width:100%;
    overflow-x:hidden;
    --red: #ea5e3d;
    --sponsor-width:3000px;
}

html{
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
}

body{
    position:relative;
    min-height:100vh;
    width:100%;
    overflow:hidden;
    margin:0px;
    background: #e5e5e5 url("../public/rep-dot.png");
    background-size: 90px auto;
}

.unscrollable-html{
    overflow:hidden;
}


h1{
    color:#333;
    margin-top:0px;
    margin-bottom:20px;
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

h2{
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color:#333;
}

h3{
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color:#333;
}

p{
    color: #333;
}

span{
    color: #333;
}

button{
    background-color: var(--red);
    cursor:pointer;
    border:none;
    color:white;
    transition: .2s;
    outline:none;
}

button:hover{
    transform: translateY(-1px);
}

svg path,
svg line{
    stroke-linecap: round;
    stroke-linejoin: round;
    fill: none;
    stroke: #fff
}


.section-subheader{
    text-align:center;
    font-size:25px;
}

/*header*/

.header{
    height:500px;

    background-image: url("../public/rep-dot.png"), linear-gradient(335deg, rgba(234,94,61,1) 40%, rgb(255, 126, 94) 100%);;
    background-size:90px, cover;


    margin-bottom:20px;
    width:100%;
    filter:drop-shadow(0px 2px 2px rgba(0,0,0, .2));
    clip-path: polygon(0 0, 100% 0%, 100% calc(100% - 100px), 0 100%);
}

.login-button{

    display:inline-flex;
    width:fit-content;
    padding: 0px 15px;
    height:30px;
    background-color:rgba(24,24,24,.8);
    border-radius:15px;
    text-decoration:none;
    margin-left:10px;
    transition: all .15s ease-in-out;
    outline:none;
}

.login-button:hover{
    box-shadow: 0px 2px 3px rgba(0,0,0,.1);
    transform: translateY(-1px);
}

.login-text{
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color:white;
}

.login-status{
    position: absolute;
    z-index:999;
    top:0px;
    right:0px;
    padding:10px;
    background-color: rgba(0,0,0,.45);
    box-shadow: -1px 2px 4px rgba(0,0,0, .3);
    border-radius:0px 0px 0px 10px;
}

.login-button-text{
    margin:auto;
    color:white;
}

.arrow-svg{
    padding-left:5px;
    
}

#arrow{
    transform: translateX(-5px);
    transition: all .15s; 
    fill: #fff;
    stroke:none;
}
#arrowLine{
    stroke-dasharray: 10;
    stroke-dashoffset: 10;
    transition: all .15s;
    stroke:#fff;
}




a:hover #arrow{
    transform: translateX(0px)
}

a:hover #arrowLine{
    stroke-dashoffset: 0;
}

.title{
    text-align:center;
    color:#fff;
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size:70px;
    padding:30px;
    padding-bottom:0px;
    filter: drop-shadow(2px 2px 2px rgba(0,0,0,.3));
    margin-bottom:0px;

}

.title::before{
    content: " ";
    width: 350px;
    height: 3px;
    display:block;
    margin:auto;
    background-color:#fff;
    filter:none;
}

.title::after{
    content: " ";
    position:relative;
    top:5.5px;
    width: 350px;
    height: 3px;
    display:block;
    margin:auto;
    background-color:#fff;
    filter:none;
}

.subtitle{
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size:20px;
    color:white;
    text-align:center;
    filter: drop-shadow(1px 1px 2px rgba(0,0,0,.3));
}


/*footer*/

.footer{
    position:relative;
    z-index:1;
    height:500px;
    width:100%;
    background: #e5e5e5 url("../public/rep-dot.png");
    background-size:90px 90px;
    background-color:var(--red);
    clip-path: polygon(0 100px, 100% 0, 100% 100%, 0% 100%);
    margin-top: -205px;
}

.footer-section{
    position:absolute;
    height:200px;
    width:100%;
    padding-top:20px;
    background-color:white;
    bottom:0;
    
}

.to-top{
    width:100px;
    margin:auto;
    height:50px;
    background-color: var(--red);
    position:absolute;
    bottom:-0px;
    left:50%;
    transform: translateX(-50px);
    border-radius:10px 10px 0px 0px;
    display:flex;
    box-shadow: 0px -2px 4px rgba(0,0,0, .2);
    cursor:pointer;

}

.to-top-text{
    margin:auto;
    color:white;
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: bolder;
    font-size:38px;
    line-height:25px;
}

/*InfoSection*/

.two-column{
    position:relative;
    z-index:2;
    display:grid;
    grid-template-columns: 1fr 1fr;
    height:fit-content;
    max-width:1000px;
    width:90%;
    margin:auto;
    margin-top:50px;
    gap:50px;
    margin-bottom:30px;
}

.fi-column{
    grid-column: span 2;
    height:fit-content;
    width:100%;
    background-color:white;
    box-shadow: 0px 0px 10px rgba(0,0, 0,.3);
}

.section-top-bar{
    background:var(--red);
    padding:17px;
    box-shadow: 0px 2px 4px rgba(0,0,0, .2);
}

.section-header{
    margin:auto;
    color:white;
    font-size:30px;
    margin-bottom:0px;
}

.section-content{
    padding:20px;
    display:grid;
    gap:20px;
    grid-template-columns: repeat(2, 1fr);
    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size:18px;
    height:fit-content;
}

.grid-item-lg{
    grid-column: span 2;
    width:80%;
    margin:auto;
}

.grid-item-sm{  
    grid: span 1;
    text-align:center;
}

ul{
    list-style-type:none;
    padding-left:0px;
}
/* ... */

